[workspace]
members = ["core", "nonblocking", "blocking", "experimentation"]
resolver = "2"

[workspace.package]
version = "0.1.0"                                       # NOTE remembe to update this and sbelow dependencies for byteserde and byteserde_derive
authors = ["Softstream <softstream.link@gmail.com>"]
readme = "readme.md"
license-file = "LICENSE"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/softstream-link/links"
keywords = ["network"]
categories = ["network"]


[workspace.dependencies]
# derive
byteserde = { version = "0.6" }        # TODO should be eliminated once trait Messenger is moved to tempalte serializization
byteserde_types = { version = "0.6" }  # required to setup unit test models
byteserde_derive = { version = "0.6" } # required to setup unit test models
derive_more = "0.99"                   # try_into, etc

# networking
links_nonblocking = { path = "./nonblocking" }
links_blocking = { path = "./blocking" }
links_core = { path = "./core" }
bytes = "1.4"

# synch
mio = { version = "0.8", features = ["os-poll", "net"] }


# utils
rand = "0.8"
num-format = "0.4"
chrono = "0.4"
lazy_static = "1.4.0"
more-asserts = "0.3"

# spin locks
spin = { version = "0.9" }

# logging
log = "0.4"
env_logger = "0.10"
colored = "2.0"


# bechmarking only
criterion = { version = "0.5", features = ["async_tokio", "async_futures"] }

# collections
slab = "0.4"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
