[workspace]
members = ["core", "nonblocking", "blocking", "bindings/python"]
resolver = "2"

[workspace.package]
version = "0.2.7"
authors = ["Softstream <softstream.link@gmail.com>"]
readme = "readme.md"
license-file = "LICENSE"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/softstream-link/links"
keywords = ["network"]
categories = ["network-programming"]


[workspace.dependencies]
# derive
byteserde = { version = "0.6.2" }        # required to setup unit test models
byteserde_types = { version = "0.6.2" }  # required to setup unit test models
byteserde_derive = { version = "0.6.2" } # required to setup unit test models
derive_more = "0.99"                     # try_into, etc

links_core = { version = "0.2.7", path = "./core" }
links_nonblocking = { version = "0.2.7", path = "./nonblocking" }
links_blocking = { version = "0.2.7", path = "./blocking" }

# networking
bytes = "1.4"

# synch
mio = { version = "0.8", features = ["os-poll", "net"] }


# utils
rand = "0.8"
num-format = "0.4"
chrono = "0.4"
lazy_static = "1.4.0"
more-asserts = "0.3"

# spin locks
spin = { version = "0.9" }

# logging
log = "0.4"
env_logger = "0.11"
colored = "2.0"


# bechmarking only
criterion = { version = "0.5", features = ["async_tokio", "async_futures"] }

# collections
slab = "0.4"

# serde
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

# conditional compilation
cfg-if = { version = "1.0" }
