[package]
name = "links_core"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Core create of the links collection"

[dependencies]
bytes = { workspace = true }

log = { workspace = true }
slab = { workspace = true } # slab allocator

chrono = { workspace = true }
spin = { workspace = true }   # spin mutex


# activated by feature "unittest"
byteserde = { workspace = true, optional = true }        # required to setup unit test models
byteserde_types = { workspace = true, optional = true }  # required to setup unit test models
byteserde_derive = { workspace = true, optional = true } # required to setup unit test models
serde = { workspace = true, optional = true }            # required to setup unit test models
rand = { workspace = true, optional = true }             # required to setup unit test ports
colored = { workspace = true, optional = true }          # required to setup logging
env_logger = { workspace = true, optional = true }
num-format = { workspace = true, optional = true }


[dev-dependencies]
more-asserts = { workspace = true }
# activated by feature "unittest"


[features]
default = []
full = ["unittest"]
unittest = [
    "dep:byteserde",
    "dep:byteserde_derive",
    "dep:byteserde_types",
    "dep:serde",
    "dep:rand",
    "dep:colored",
    "dep:env_logger",
    "dep:num-format",
]
