[package]
name = "experimentation"
version = "0.1.0"
edition = "2021"

publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4"
mio = { version = "0.8", features = ["os-poll", "net"] }
slab = "0.4"
rand = "0.8"
links_core = { workspace = true, features = ["unittest"]}
links_nonblocking = { workspace = true }
num-format = { workspace = true }

log = { workspace = true }

criterion = { workspace = true }
