[package]
name = "links_nonblocking"
version.workspace = true
edition.workspace = true

[features]
default = ["full"]  # TODO desable all default features during release
full = ["unittest"]
unittest = []



[dependencies]
# networking nonblocking
mio = { workspace = true } # epoll wrapper
nix = { workspace = true } # libc wrapper

# blocking & nonblocking
bytes = { workspace = true } # read buffer

links_core = { workspace = true } # traits

log = { workspace = true }

slab = { workspace = true } # slab allocator # TODO remove after moved to core

byteserde = { workspace = true } # byteserde::utils::hex::to_hex_pretty #TODO move to seperate crate


[dev-dependencies]
links_core = { workspace = true, features = ["unittest"] } # traits

env_logger = { workspace = true }
num-format = { workspace = true }

byteserde_types = { workspace = true }  # required to setup unit test models
byteserde_derive = { workspace = true } # required to setup unit test models


criterion = { workspace = true } # required to setup benchmarks
rand = { workspace = true }      # required to setup benchmarks

# BENCHMARKS
[[bench]]
name = "channel_rx_tx_bench"
harness = false

[[bench]]
name = "nonblocking_bench"
harness = false

[[bench]]
name = "message_ser_des"
harness = false
required-features = ["unittest"]


[[bench]]
name = "framer_nonblocking_bench"
harness = false


[[bench]]
name = "messender_nonblocking_bench"
harness = false
required-features = ["unittest"]


[[bench]]
name = "clt2clt_nonblocking_busywait_bench"
harness = false
required-features = ["unittest"]

# EXAMPLES

[[example]]
name = "01_clt2clt_nonblocking_busywait_example"
required-features = ["full"]

[[example]]
name = "02_clt2svcpool_nonblocking_busywait_example"
required-features = ["full"]

[[example]]
name = "03_cltsplit2svcpoll_nonblocking_busywait_example"
required-features = ["full"]