[package]
name = "links_testing"
version = "0.1.0"
edition = "2021"

publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# links_network_async ={ workspace = true }
log = { workspace = true, optional = true}
env_logger = { workspace = true, optional = true}
lazy_static = { workspace = true, optional = true}
rand = { workspace = true, optional = true}

[features]
default = ["unittest"]
unittest = ["dep:log", "dep:env_logger", "dep:lazy_static", "dep:rand"]
