[package]
name = "links_testing"
version = "0.1.0"
edition = "2021"

publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# log = { workspace = true, optional = true }
# env_logger = { workspace = true, optional = true }
# rand = { workspace = true, optional = true }

# bytes = { workspace = true, optional = true }
# byteserde = { workspace = true, optional = true }        # required to do serialization and deserialization
# byteserde_types = { workspace = true, optional = true }  # required to setup unit test models
# byteserde_derive = { workspace = true, optional = true } # required to setup unit test models

# num-format = { workspace = true, optional = true }
# colored = { workspace = true, optional = true }

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
rand = { workspace = true }

bytes = { workspace = true }
byteserde = { workspace = true }        # required to do serialization and deserialization
byteserde_types = { workspace = true }  # required to setup unit test models
byteserde_derive = { workspace = true } # required to setup unit test models

num-format = { workspace = true }
colored = { workspace = true }
