[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "links_connect"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = [
    "pyo3/extension-module",
    "pyo3/abi3",
    "pyo3/abi3-py310",
    "pyo3/multiple-pymethods",
    "links_bindings_python/unittest"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "./../../target/.pytest_cache"
