[build-system]
requires = ["maturin>=1.3,<2.0"]
build-backend = "maturin"

[project]
name = "links_bindings_python"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["links_connect>=1.1"]
[tool.maturin]
features = [
    "pyo3/extension-module",
    "pyo3/abi3",
    "pyo3/abi3-py310",
    "pyo3/multiple-pymethods",
    "links_bindings_python/unittest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "./../../target/.pytest_cache"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(threadName)10s|%(levelname)7s] %(message)s \t(%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S.%f"
