[package]
name = "links-network-async"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }

framing = { path = "../../protocols/framing" }
soupbintcp4 = { path = "../../protocols/soupbintcp4" }
byteserde = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
lazy_static = { workspace = true } 
