[package]
name = "links_network_async"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
env_logger = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
num-format = { workspace = true }

links_core ={ workspace = true }

byteserde = { workspace = true } # required to do serialization and deserialization

[dev-dependencies]
byteserde_types = { workspace = true }  # required to setup unit test models
byteserde_derive = { workspace = true } # required to setup unit test models

links_core ={ workspace = true, features = ["unittest"]}
tokio-test = { workspace = true }
lazy_static = { workspace = true }


criterion = { workspace = true } # required to setup benchmarks
rand = { workspace = true } # required to setup benchmarks

[[bench]]
name = "framer_async_bench"
harness = false