[package]
name = "links_network_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
num-format = { workspace = true }
log = { workspace = true }

byteserde = { workspace = true } # TODO should be eliminated once trait Messenger is moved to tempalte serializization


[dev-dependencies]
env_logger = { workspace = true }
links_testing = { workspace = true }
byteserde_types = { workspace = true }  # required to setup unit test models
byteserde_derive = { workspace = true } # required to setup unit test models
