[package]
name = "links_network_sync"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# networking
mio = { workspace = true } # epoll wrapper
nix = { workspace = true } # libc wrapper

bytes = { workspace = true } # read buffer

links_network_core = { workspace = true } # traits

log = { workspace = true }

byteserde = { workspace = true } # required to do serialization and deserialization


[dev-dependencies]
env_logger = { workspace = true }
links_testing = { workspace = true }
num-format = { workspace = true }

byteserde_types = { workspace = true }  # required to setup unit test models
byteserde_derive = { workspace = true } # required to setup unit test models


criterion = { workspace = true } # required to setup benchmarks
rand = { workspace = true } # required to setup benchmarks


[[bench]]
name = "framer_sync_blocking_bench"
harness = false

[[bench]]
name = "framer_sync_nonblocking_bench"
harness = false