[package]
name = "links_network_sync"
version = "0.1.0"
edition = "2021"

[features]
default = ["full"]                     # TODO desable all default features during release
full = ["unittest", "blocking", "nonblocking"]
blocking = []
nonblocking = ["dep:mio"]
unittest = ["dep:links_testing"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# networking nonblocking
mio = { workspace = true, optional = true} # epoll wrapper
nix = { workspace = true } # libc wrapper

# blocking & nonblocking
bytes = { workspace = true } # read buffer

links_network_core = { workspace = true } # traits

log = { workspace = true }

slab = { workspace = true } # slab allocator

byteserde = { workspace = true } # byteserde::utils::hex::to_hex_pretty #TODO move to seperate crate


links_testing = { workspace = true, optional = true } # benchmarks & testing only

[dev-dependencies]
links_testing = { workspace = true } # tests

env_logger = { workspace = true }
num-format = { workspace = true }

byteserde_types = { workspace = true }  # required to setup unit test models
byteserde_derive = { workspace = true } # required to setup unit test models


criterion = { workspace = true } # required to setup benchmarks
rand = { workspace = true }      # required to setup benchmarks


[[bench]]
name = "framer_sync_blocking_bench"
harness = false

[[bench]]
name = "framer_sync_nonblocking_bench"
harness = false

[[bench]]
name = "message_ser_des"
harness = false
required-features = ["unittest"]

[[bench]]
name = "messender_sync_blocking_bench"
harness = false
required-features = ["unittest"]

[[bench]]
name = "messender_sync_nonblocking_bench"
harness = false
required-features = ["unittest"]

[[bench]]
name = "clt_sync_nonblocking_busywait_bench"
harness = false
required-features = ["unittest"]


[[bench]]
name = "channel_rx_tx"
harness = false


[[example]]
name = "sync_nonblocking_busywait_example"
required-features = ["full"]
