[package]
name = "framing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = { workspace = true }
byteserde = { workspace = true }
byteserde_types = { workspace = true }
byteserde_derive = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
tokio-test = { workspace = true }