[package]
name = "links_ouch_async"
version = "5.0.0"
edition = "2021"

[dependencies]
byteserde = { workspace = true }
byteserde_derive = { workspace = true }
byteserde_types = { workspace = true }
derive_more = { workspace = true }

links_soupbintcp_async = { workspace = true }
links_network_async = { workspace = true }

chrono = { workspace = true }
tokio = { workspace = true }



[dev-dependencies]
env_logger = { workspace = true }
log = { workspace = true }

tokio-test = { workspace = true }
lazy_static = { workspace = true }

links_network_core = { workspace = true, features = ["unittest"]}

criterion = { workspace = true }

[[bench]]
name = "ouch_model"
harness = false

[[bench]]
name = "ouch_send"
harness = false