[package]
name = "ouch5"
version = "0.1.0"
edition = "2021"

[dependencies]
byteserde = { workspace = true }
byteserde_derive = { workspace = true }
byteserde_types = { workspace = true }

# bytes = { workspace = true }
soupbintcp4 = { path = "../soupbintcp4" }

chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
log = { workspace = true }

tokio-test = { workspace = true }
lazy_static = { workspace = true }
