[package]
name = "links_ouch5_async"
version = "0.1.0"
edition = "2021"

[dependencies]
byteserde = { workspace = true }
byteserde_derive = { workspace = true }
byteserde_types = { workspace = true }

# bytes = { workspace = true }
links_soupbintcp_async = { workspace = true }
links_network_async = { workspace = true }

chrono = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
log = { workspace = true }

tokio-test = { workspace = true }
lazy_static = { workspace = true }

links_testing = { workspace = true }
