[package]
name = "links_soupbintcp_async"
version = "4.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteserde = { workspace = true }
byteserde_derive = { workspace = true }
byteserde_types = { workspace = true }

links_network_async = { workspace = true }

bytes = { workspace = true }
log = { workspace = true }

tokio = { workspace = true }
derive_more = { workspace = true }


[dev-dependencies]
env_logger = { workspace = true }

tokio-test = { workspace = true }
lazy_static = { workspace = true }

links_network_core = { workspace = true, features = ["unittest"]}
