[package]
name = "links"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteserde = "*" # { path = "../../github-softstream.link/byteserde/" }
byteserde_derive = "*" #{ path = "../../github-softstream.link/byteserde/byteserde_derive" }
byteserde_types = "*"

[dev-dependencies]
env_logger = "0.10"
log = "0.4"
