[package]
name = "soupbintcp4"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# byteserde = "*" # { path = "../../github-softstream.link/byteserde/" }
# byteserde_derive = "*" #{ path = "../../github-softstream.link/byteserde/byteserde_derive" }
# byteserde_types = "*"
byteserde = { workspace = true }
byteserde_derive = { workspace = true }
byteserde_types = { workspace = true }

# framing = { path = "../framing"}
links_network_async = { path = "../../network/async" }

bytes = { workspace = true }
log = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
